--- a/lovecharity/css/style.css
+++ b/lovecharity/css/style.css
@@ -464,6 +464,10 @@ p {
 .project-info div {
     margin-bottom:5px;
 }
+.project-info  a{
+color:#BBFFEE;
+}
+
 .close {
     float: right;
     width: 40px;
